--- a/myportfolio/styles.css
+++ b/myportfolio/styles.css
@@ -11,10 +11,11 @@ a {
 }
 
 header {
-    /*display: flex;*/
-    justify-content: space-evenly;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    /* margin: 0 10px; */
+    margin: 0 10px;
     padding: 10px;
 }
 
@@ -23,7 +24,7 @@ header img {
 }
 
 nav {
-    background-color: #000;
+    background-color: #121212;
     color: white;
     padding: 15px;
     width: 100%;
