--- a/myportfolio/styles.css
+++ b/myportfolio/styles.css
@@ -1,16 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap");
+
 body {
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #000;
-    color: beige;
+    color: #999;
 }
 
 a {
     text-decoration: none;
-    color: white;
+    color: whitesmoke;
 }
 
 header {
@@ -28,8 +35,11 @@ header img {
 }
 
 nav {
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #121212;
-    color: white;
+    color: whitesmoke;
     padding: 15px;
     width: 100%;
     box-sizing: border-box;
@@ -50,8 +60,21 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: whitesmoke;
     font-weight: bold;
+}
+
+body h1,
+h2,
+h3 {
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ad2b3a;
+}
+
+#startPage {
+    width: 80%;
 }
 
 #about {
@@ -70,6 +93,13 @@ nav a {
 #skills {
     display: flex;
     flex-direction: column;
+}
+
+.myImg {
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ad2b3a;
 }
 
 .container {
