--- a/myportfolio/styles.css
+++ b/myportfolio/styles.css
@@ -91,15 +91,30 @@ h3 {
 }
 
 #skills {
-    /* width: 50%;
-    height: 30%; */
-    background-image: url("images/skillsPageBackground.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    padding: 200px;
-    border-radius: 8px;
+    background: #d9d9d9;
+    width: 80%;
+    height: auto;
+    position: relative;
+}
+
+#skills::after,
+#skills::before {
+    content: " ";
+    background: black;
+    position: absolute;
+    width: 300px;
+    height: 100px;
+}
+
+#skills::before {
+    transform: rotate(-45deg);
+    top: 0px;
+    left: -180px;
+}
+#skills::after {
+    transform: rotate(135deg);
+    bottom: 0px;
+    right: -180px;
 }
 
 .myImg {
@@ -111,7 +126,9 @@ h3 {
 
 .container {
     display: flex;
+    justify-content: center;
     margin: 20px;
+    padding: 250px;
 }
 
 .image {
