--- a/flexBoxUsage.css
+++ b/flexBoxUsage.css
@@ -7,6 +7,8 @@ body {
     min-height: 100vh;
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
+    margin: 3px;
+    align-items: flex-start;
 }
 
 .flex-container {
@@ -16,11 +18,12 @@ body {
     overflow: hidden;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    flex-direction: row-reverse;
+    flex-direction: column;
 }
 
 .flex-item {
     text-align: center;
+    justify-content: space-around;
     color: #333;
     padding: 30px;
     margin: 10px;
@@ -38,6 +41,66 @@ body {
     background-color: #4169e1;
 }
 .flex-item:nth-child(4) {
+    background-color: #000;
+    color: #fff;
+    border-radius: 17px;
+}
+
+.stretched-container {
+    display: flex;
+    height: 300px;
+    border: 1px solid #ccc;
+    align-items: stretch;
+}
+
+.flex {
+    border: 1px solid #333;
+    margin: 5px;
+}
+
+.flex:nth-child(1) {
+    background-color: #ffd700;
+    border-radius: 17px;
+}
+.flex:nth-child(2) {
+    background-color: #ff4500;
+}
+.flex:nth-child(3) {
+    background-color: #4169e1;
+}
+.flex:nth-child(4) {
+    background-color: #000;
+    color: #fff;
+    border-radius: 17px;
+}
+
+.flex-startcontainer {
+    display: flex-start;
+    border: 2px solid #333;
+    border-radius: 35px;
+    overflow: hidden;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+}
+
+.start {
+    border: 1px solid #333;
+    margin: 5px;
+    padding: 40px;
+}
+
+.start:nth-child(1) {
+    background-color: #ffd700;
+    border-radius: 17px;
+}
+.start:nth-child(2) {
+    background-color: #ff4500;
+}
+.start:nth-child(3) {
+    background-color: #4169e1;
+}
+.start:nth-child(4) {
     background-color: #000;
     color: #fff;
     border-radius: 17px;
