--- a/3dTransformation.css
+++ b/3dTransformation.css
@@ -1,17 +1,22 @@
 .container {
     perspective: 800px;
     perspective-origin: 50% 50%;
+    width: 200px;
+    height: 200px;
+    margin: 100px auto;
 }
 
 .box {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     background-color: #3498db;
     transform-style: preserve-3d;
-    transform: rotateX(45deg) rotateY(45deg);
+    transform: translateX(-50%) translateY(-50%) translateZ(-50px)
+        rotateX(45deg) rotateY(45deg);
     transition: transform 0.5s ease-in-out;
 }
 
 .container:hover .box {
-    transform: rotateX(0deg) rotateY(0deg);
+    transform: translateX(-50%) translateY(-50%) translateZ(0) rotateX(0deg)
+        rotateY(0deg);
 }
