--- a/3dTransformation.css
+++ b/3dTransformation.css
@@ -1,6 +1,4 @@
 .container {
-    perspective: 800px;
-    perspective-origin: 50% 50%;
     width: 200px;
     height: 200px;
     margin: 100px auto;
@@ -14,6 +12,7 @@
     transform: translateX(-50%) translateY(-50%) translateZ(-50px)
         rotateX(45deg) rotateY(45deg);
     transition: transform 0.5s ease-in-out;
+    box-shadow: 50px 50px 5px grey;
 }
 
 .container:hover .box {
